fixed css alignment for panels. Dialed in glass morphism effect

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -258,14 +258,14 @@ code {
 
 /* Forum styles start */
 .forumPanel {
-background: rgba( 255, 255, 255, 0.30 );
+background: rgba(0, 0, 0, 0.8);
 box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
 backdrop-filter: blur( 4px );
 -webkit-backdrop-filter: blur( 4px );
 border-radius: 10px;
 border: 1px solid rgba( 255, 255, 255, 0.18 );
 margin-top: 2%;
-padding: 2% 0;
+padding: 2% 0 2% 0;
 }
 
 .forumCol {
